# FSIsolver

./: .gitignore  IBFE2D.py  IBFE3D.py  IBFE3D_GPU.py  IPCS.py  LeftVentricleBoundaryCondition.py  LeftVentricleMesh.py  LeftVentricleSolver.py  NavierStokesSolver.py  PassiveLeftVentricle.py  PeriodicalBoundary.py  TaylorHood.py  UnitConversion.py  b.py  c.py  classStokesSolver.py  elf.u_n = Function(V)  levelset2D.py  levelset3D.py  main.py  myStokesSolver.py  originNSsolver.py  projection.py  pure_solid.py  sav_projection.py  solutions.py  test.py  test2D.py  test3D.py  test_exact.py  test_exact_ipcs.py  test_exact_lianlei.py  test_exact_project.py  test_exact_sav_ipcs.py  test_exact_sav_taylorhood.py  test_exact_taylorhood.py  test_force.py  分析.txt
DeltaInterpolation/: .gitignore  CMakeLists.txt  IBInterpolation.h  IBInterpolation.py  IBMesh.h  IBMesh.py  __init__.py  main.cpp  main.py  readme.md
DeltaInterpolation3D/: .gitignore  2d_example.py  CMakeLists.txt  HexPoisson.h  IB.cpp  IBInterpolation.cpp  IBInterpolation.h  IBMesh.cpp  IBMesh.h  TetPoisson.h  __init__.py  a.py  b.py  generate_mesh.py  liddriven.py  main.py  nohup.out
NavierStokesSolver/: IPCSSolver.py  LianleiSolver.py  LianleiSolver2.py  ProjectSolver.py  SAVSolver.py  TaylorHoodSolver.py  __init__.py
ParticleInterpolation/: CMakeLists.txt  ParticleInterPolation_1.cpp  ParticleInterpolation.cpp  ParticleInterpolation.py  TetPoisson.h  __init__.py  main.py  output_time.sh  particles.cpp
